syntax = "proto3";

package template;

import "google/protobuf/empty.proto";

option go_package = "github.com/milkyhoop/template-service-golang/internal/delivery/pb/template;template";
// option python_package = "app.protos";

service TemplateService {
  rpc DoSomething (TemplateServiceRequest) returns (TemplateServiceResponse);
  rpc HealthCheck (google.protobuf.Empty) returns (google.protobuf.Empty);
}

message TemplateServiceRequest {
  string user_id = 1;
  string input = 2;
}

message TemplateServiceResponse {
  string status = 1;
  string result = 2;
}
